WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145873
REGRESSION(
r184899
): [Cocoa] font-variant: small-caps is not honored with web fonts
https://bugs.webkit.org/show_bug.cgi?id=145873
Summary
REGRESSION(r184899): [Cocoa] font-variant: small-caps is not honored with web...
Myles C. Maxfield
Reported
2015-06-10 22:08:03 PDT
font-variant: small-caps is not honored with web fonts
Attachments
Patch
(25.09 KB, patch)
2015-06-10 22:38 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(29.51 KB, patch)
2015-06-10 23:07 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-mavericks
(733.96 KB, application/zip)
2015-06-11 05:32 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-mavericks-wk2
(625.74 KB, application/zip)
2015-06-11 05:51 PDT
,
Build Bot
no flags
Details
Patch
(5.68 KB, patch)
2015-06-16 17:29 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-06-10 22:38:54 PDT
<
rdar://problem/21314282
>
Myles C. Maxfield
Comment 2
2015-06-10 22:38:57 PDT
Created
attachment 254707
[details]
Patch
Myles C. Maxfield
Comment 3
2015-06-10 23:07:52 PDT
Created
attachment 254710
[details]
Patch
Build Bot
Comment 4
2015-06-11 05:32:18 PDT
Comment on
attachment 254710
[details]
Patch
Attachment 254710
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6300169943384064
Number of test failures exceeded the failure limit.
Build Bot
Comment 5
2015-06-11 05:32:21 PDT
Created
attachment 254716
[details]
Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 6
2015-06-11 05:51:13 PDT
Comment on
attachment 254710
[details]
Patch
Attachment 254710
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6032054462447616
Number of test failures exceeded the failure limit.
Build Bot
Comment 7
2015-06-11 05:51:16 PDT
Created
attachment 254717
[details]
Archive of layout-test-results from ews107 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Darin Adler
Comment 8
2015-06-11 10:59:15 PDT
Comment on
attachment 254710
[details]
Patch Looks like a lot of tests are crashing.
Myles C. Maxfield
Comment 9
2015-06-16 15:54:34 PDT
Looks like the failures are Mavericks-specific
Myles C. Maxfield
Comment 10
2015-06-16 15:56:20 PDT
(In reply to
comment #9
)
> Looks like the failures are Mavericks-specific
Oh, whoops.
r184899
is only applicable to particular operating systems.
Myles C. Maxfield
Comment 11
2015-06-16 17:29:46 PDT
Created
attachment 254985
[details]
Patch
Dean Jackson
Comment 12
2015-06-16 17:32:17 PDT
Comment on
attachment 254985
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254985&action=review
> Source/WebCore/platform/graphics/cocoa/FontCocoa.mm:314 > +#if !CORETEXT_WEB_FONTS
Why is this not an ENABLE flag?
> Source/WebCore/platform/text/TextFlags.h:31 > +// See
https://bug-145873-attachments.webkit.org/attachment.cgi?id=254710
Did you mean to link to an attachment?
mitz
Comment 13
2015-06-16 17:49:15 PDT
Is this a duplicate of
bug 145802
?
Myles C. Maxfield
Comment 14
2015-06-16 18:26:54 PDT
(In reply to
comment #13
)
> Is this a duplicate of
bug 145802
?
Yes. It looks like that's the original, but all the work is in this bug, so I'll reverse-dup that one to this one.
WebKit Commit Bot
Comment 15
2015-06-16 18:27:03 PDT
Comment on
attachment 254985
[details]
Patch Clearing flags on attachment: 254985 Committed
r185632
: <
http://trac.webkit.org/changeset/185632
>
WebKit Commit Bot
Comment 16
2015-06-16 18:27:08 PDT
All reviewed patches have been landed. Closing bug.
Myles C. Maxfield
Comment 17
2015-06-16 18:27:14 PDT
***
Bug 145802
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 18
2015-06-17 09:49:14 PDT
This broke fast/writing-mode/broken-ideograph-small-caps.html on Yosemite. I'm going to land custom result, however please confirm that new results are good:
https://build.webkit.org/results/Apple%20Yosemite%20Release%20WK1%20(Tests)/r185632%20(6094)/fast/writing-mode/broken-ideograph-small-caps-diff.txt
Alexey Proskuryakov
Comment 19
2015-06-17 09:58:56 PDT
The difference between old and new results seems expected - we just get smaller letters for small caps. However, looking at image results that are checked in <
https://build-safari.apple.com/results/Trunk%20Syrah%20Production%20WK1%20Tests/r185636_72857%20(22914)/retries/fast/writing-mode/broken-ideograph-small-caps-diffs.html
>, we appear to have an earlier regression - small caps are incorrectly rotated. This happens even in Safari 7.1.6 on Mavericks. Could you please confirm whether the current behavior is wrong, and if so, file a new bug?
Myles C. Maxfield
Comment 20
2015-06-17 10:12:16 PDT
Way(In reply to
comment #19
)
> The difference between old and new results seems expected - we just get > smaller letters for small caps. > > However, looking at image results that are checked in > <
https://build-safari.apple.com/results/
> Trunk%20Syrah%20Production%20WK1%20Tests/r185636_72857%20(22914)/retries/ > fast/writing-mode/broken-ideograph-small-caps-diffs.html>, we appear to have > an earlier regression - small caps are incorrectly rotated. This happens > even in Safari 7.1.6 on Mavericks. > > Could you please confirm whether the current behavior is wrong, and if so, > file a new bug?
Way ahead of you. I filed a bug about this last April.
https://bugs.webkit.org/show_bug.cgi?id=143454
Myles C. Maxfield
Comment 21
2015-06-17 10:15:07 PDT
(In reply to
comment #19
)
> The difference between old and new results seems expected - we just get > smaller letters for small caps. > > However, looking at image results that are checked in > <
https://build-safari.apple.com/results/
> Trunk%20Syrah%20Production%20WK1%20Tests/r185636_72857%20(22914)/retries/ > fast/writing-mode/broken-ideograph-small-caps-diffs.html>, we appear to have > an earlier regression - small caps are incorrectly rotated. This happens > even in Safari 7.1.6 on Mavericks. > > Could you please confirm whether the current behavior is wrong, and if so, > file a new bug?
Yes, this is a progression.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug